add condition for index query